RESOLVED FIXED282793
REGRESSION(282068@main): Flashing scrollbar on Spotify when hovering the fullscreen button
https://bugs.webkit.org/show_bug.cgi?id=282793
Summary REGRESSION(282068@main): Flashing scrollbar on Spotify when hovering the full...
Tim Nguyen (:ntim)
Reported 2024-11-07 17:18:19 PST
Attachments
Tim Nguyen (:ntim)
Comment 1 2024-11-07 17:24:15 PST
EWS
Comment 2 2024-11-08 10:46:24 PST
Committed 286350@main (331f6e1deec3): <https://commits.webkit.org/286350@main> Reviewed commits have been landed. Closing PR #36356 and removing active labels.
EWS
Comment 3 2024-11-15 12:50:51 PST
Committed 283286.483@safari-7620-branch (62c6fe3761c0): <https://commits.webkit.org/283286.483@safari-7620-branch> Reviewed commits have been landed. Closing PR #2289 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.