REGRESSION(282068@main): Flashing scrollbar on Spotify when hovering the fullscreen button https://bugs.webkit.org/show_bug.cgi?id=282793 rdar://138918575

Reviewed by Simon Fraser.

The temporary glitch is a pre-existing unstable layout bug that was papered over using body::-webkit-scrollbar { display: none } as a workaround.

Spotify also uses body { scrollbar-width: none }, and per-spec, any non-default scrollbar-width value makes ::-webkit-scrollbar styling ineffective, so this workaround no longer works.

While we investigate the root issue further, make a quirk to make `scrollbar-width: none` no-op on body for now, to address the customer issue.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsBodyScrollbarWidthNoneDisabledQuirk const):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):

Canonical link: https://commits.webkit.org/286350@main